crates/tree_sitter_crochet/grammar.js
    parenthesized_expression: ($, prev) => seq("(", $.expression, ")"),

    // Removes sequence expression
    _semicolon: ($, prev) => ";",

    // Replaces 'readonly' with 'mut'
    expression: ($, prev) => {
      // Removes ternary expression
      const choices = prev.members.filter(
        (member) => member.name !== "ternary_expression"
      );

      choices.push($.do_expression);
      choices.push($.if_expression);
      choices.push($.match_expression);
      choices.push($.try_statement);

      return choice(...choices);
    },

    // Removes with statement
    function_declaration: ($, prev) =>
      prec.right("declaration", dropLastMember(prev.content)),
    lexical_declaration: ($) =>
      seq(
        // TODO: get rid of "const"
        field("kind", choice("let", "const")),
        optional(field("rec", "rec")),
        field("decl", $.variable_declarator),
        $._semicolon
      ),

    variable_declarator: ($) =>
      choice(
        seq(
          // field("name", choice($.identifier, $._destructuring_pattern)),
          field(
            "name",
            choice($.binding_identifier, $._binding_destructuring_pattern)
          ),
          field("type", optional($.type_annotation)),
          optional($._initializer)
        ),
        prec(
          "declaration",
          seq(
            // field("name", $.identifier),
            field("name", $.binding_identifier),
            "!",
            field("type", $.type_annotation)
          )
        )
      ),

    // TODO: Create a function that can remove all nodes of a certain type
    // in a rule declaration.
    statement_block: ($, prev) =>
      seq(
        "{",
        repeat($.statement),
        // We define an alias here so that it's easy to check if the
        // last named child in the block is an expression or not.
        optional(alias($.expression, $.expression)),
        "}"
      ),

    // Requires these statements ot use { }
    for_in_statement: ($, prev) =>
      replaceField(prev, "body", $.statement_block),
    if_expression: ($) =>
      prec.right(
        seq(
          "if",
          "(",
          field("condition", choice($.let_expression, $.expression)),
          ")",
          field("consequence", $.statement_block),
          optional(field("alternative", $.else_clause))
        )
      ),
    else_clause: ($, prev) =>
      seq("else", choice($.if_expression, $.statement_block)),

    // Adds `throw` to the list of unary expressions
    let_expression: ($) =>
      seq("let", field("name", $.refutable_pattern), $._initializer),

    match_expression: ($) =>
      seq(
        "match",
        "(",
        field("expression", choice($.expression, $.statement_block)),
        ")",
        field("arms", $.match_arms)
      ),

    match_arm: ($) =>
      seq(
        field("pattern", $.refutable_pattern),
        optional(
          seq(
            "if",
            "(",
            field("condition", choice($.let_expression, $.expression)),
            ")"
          )
        ),
        // NOTE: we use "->" instead of "=>" to help indicate that there isn't
        // a new stack frame when stepping through match expressions like there
        // is with an arrow expression.
        "->",
        field("value", choice($.expression, $.statement_block))
      ),

    //
    // Refutable patterns
    //

    refutable_pattern: ($) =>
      choice(
        // literals
        $.number,
        $.string,
        $.true,
        $.false,
        // TOOD: support regex literals

        $.binding_identifier, // identifiers + undefined

        $.refutable_array_pattern,
        $.refutable_is_pattern,
        $.refutable_object_pattern,
        $.wildcard
      ),

    refutable_array_pattern: ($) =>
      seq(
        "[",
        commaSep(choice($.refutable_pattern, $.refutable_rest_pattern)),
        "]"
      ),

    refutable_is_pattern: ($) => seq($.binding_identifier, "is", $.identifier),

    refutable_object_pattern: ($) =>
      prec(
        "object",
        seq(
          "{",
          commaSep(
            optional(
              choice(
                $.refutable_pair_pattern,
                $.refutable_rest_pattern,
                alias(
                  $.binding_identifier,
                  $.shorthand_property_identifier_pattern
                )
              )
            )
          ),
          "}"
        )
      ),

    refutable_pair_pattern: ($) =>
      seq(
        field("key", $._property_name),
        ":",
        field("value", $.refutable_pattern)
      ),

    refutable_rest_pattern: ($) =>
      seq(
        "...",
        choice(
          $.binding_identifier,
          $.refutable_array_pattern,
          $.refutable_object_pattern
        )
      ),

    //
    // Patterns
    //
    // We reimplement $.pattern and its dependencies here so that:
    // - bindings that are introduced can now have an optional `mut` modifier, e.g.
    //   let {x, mut y} = point;
    // - LHS expressions are no longer allowed valid patterns
    ///

    array_pattern: ($) =>
      seq("[", commaSep(choice($.pattern, $.assignment_pattern)), "]"),

    assignment_pattern: ($) =>
      seq(field("left", $.pattern), "=", field("right", $.expression)),

    object_pattern: ($) =>
      prec(
        "object",
        seq(
          "{",
          commaSep(
            optional(
              choice(
                $.pair_pattern,
                $.rest_pattern,
                alias(
                  $.binding_identifier,
                  $.shorthand_property_identifier_pattern
                ),
                $.object_assignment_pattern
              )
            )
          ),
          "}"
        )
      ),

    object_assignment_pattern: ($) =>
      seq(
        field(
          "left",
          choice(
            $.pair_pattern,
            alias($.binding_identifier, $.shorthand_property_identifier_pattern)
          )
        ),
        "=",
        field("right", $.expression)
      ),

    pair_pattern: ($) =>
      seq(field("key", $._property_name), ":", field("value", $.pattern)),

    rest_pattern: ($) =>
      prec.right(
        seq(
          "...",
          choice($.binding_identifier, $.array_pattern, $.object_pattern)
        )
      ),

    // We use this instead of _destructuring_pattern in places where new bindings
    // will be introduced b/c of the destructuring.
    _binding_destructuring_pattern: ($) =>
      choice($.object_pattern, $.array_pattern),
